--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -36,7 +36,10 @@
     }
     section {
       margin: 0 5%;
-      padding-top: 6rem;
+      padding-top: 80px;
+    }
+    #profile {
+      padding-top: 80px;
     }
     .section__pic-container {
       width: 275px;
@@ -56,7 +59,7 @@
     #profile {
       height: 83vh;
       margin-bottom: 0;
-      padding-top: 5rem;
+      padding-top: 80px;
     }
     article {
       font-size: 1rem;
